--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "opencage-api-client": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "request": "^2.88.0",
+    "tor-request": "^3.1.0",
     "xml2json": "^0.11.2"
   }
 }
