--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fake-useragent": "^1.0.1",
     "opencage-api-client": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "request": "^2.88.0",
