--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fake-useragent": "^1.0.1",
+    "mongoose": "^5.7.5",
     "opencage-api-client": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "request": "^2.88.0",
