--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "opencage-api-client": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "request": "^2.88.0",
+    "rootpath": "^0.1.2",
     "tor-request": "^3.1.0",
     "xml2json": "^0.11.2"
   }
