--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fuse.js": "^3.4.5",
     "mongoose": "^5.7.5",
     "opencage-api-client": "^0.5.0",
     "point-in-polygon": "^1.0.1",
