--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^5.7.1",
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
