--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
     "mongoose": "^5.7.5",
+    "node-cache": "^5.0.2",
     "opencage-api-client": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "request": "^2.88.0",
