--- a/package.json
+++ b/package.json
@@ -1,26 +1,3 @@
-{
-  "name": "loyer-paris-be",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@sentry/node": "^5.7.1",
-    "cli-color": "^2.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "fuse.js": "^3.4.5",
-    "mongoose": "^5.7.5",
-    "node-cache": "^5.0.2",
-    "opencage-api-client": "^0.5.0",
-    "point-in-polygon": "^1.0.1",
-    "request": "^2.88.0",
-    "rootpath": "^0.1.2",
-    "xml2json": "^0.11.2"
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:87299ddedc1d8de1ae0c206b63b30d2b5f892cc2c3e2ec7893585ad527d7cd80
+size 619
