--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-*.json filter=lfs diff=lfs merge=lfs -text
-*.geojson filter=lfs diff=lfs merge=lfs -text
+json-data/* filter=lfs diff=lfs merge=lfs -text
