--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-json-data/* filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+*.geojson filter=lfs diff=lfs merge=lfs -text
