--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "point-in-polygon": "^1.0.1",
     "request": "^2.88.0",
     "rootpath": "^0.1.2",
+    "turf": "^3.0.14",
     "xml2json": "^0.11.2"
   }
 }
