make this branch mergeable

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^5.7.1",
+    "big-json": "^3.1.0",
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
