--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^5.7.1",
+    "big-json": "^3.1.0",
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
     "point-in-polygon": "^1.0.1",
     "request": "^2.88.0",
     "rootpath": "^0.1.2",
+    "turf": "^3.0.14",
     "xml2json": "^0.11.2"
   }
 }
