--- a/package.json
+++ b/package.json
@@ -4,13 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run dev",
+    "build": "tsc",
+    "lint": "eslint . & echo 'lint complete'",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
+    "prod": "tsc && node ./built/src/app.js",
+    "debug": "tsc && node --inspect ./built/src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^5.7.1",
+    "@types/cli-color": "^0.3.30",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.40",
+    "@types/node-cache": "^4.2.5",
+    "@types/point-in-polygon": "^1.0.0",
+    "@types/request": "^2.48.4",
+    "@types/turf": "^3.5.32",
+    "@types/xml2json": "^0.11.0",
     "big-json": "^3.1.0",
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
@@ -24,5 +37,8 @@
     "rootpath": "^0.1.2",
     "turf": "^3.0.14",
     "xml2json": "^0.11.2"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
