--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:dev": "nodemon",
     "start": "npm run dev",
     "build": "tsc",
     "lint": "eslint . & echo 'lint complete'",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
-    "prod": "tsc && node ./built/src/app.js",
-    "debug": "tsc && node --inspect ./built/src/app.js"
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "prod": "tsc && node ./build/src/index.js",
+    "debug": "tsc && node --inspect ./build/src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -39,6 +40,10 @@
     "xml2json": "^0.11.2"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.0.0-pre.44"
+    "@types/node": "^13.1.6",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.6.0",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.7.4"
   }
 }
