--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "downlevelIteration": true,
     "module": "commonjs",
     "lib": [
       "es6"
     ],
+    "baseUrl": "./",
     "allowJs": true,
     "outDir": "build",
     "rootDir": "src",
