--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cli-color": "^0.3.30",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/geojson": "^7946.0.7",
     "@types/mongoose": "^5.5.40",
     "@types/node-cache": "^4.2.5",
     "@types/point-in-polygon": "^1.0.0",
