--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "rimraf ./build && tsc",
     "lint": "eslint . & echo 'lint complete'",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
-    "prod": "tsc && node ./build/src/index.js",
-    "debug": "tsc && node --inspect ./build/src/index.js"
+    "prod": "tsc && node ./build/index.js",
+    "debug": "tsc && node --inspect ./build/index.js"
   },
   "author": "",
   "license": "ISC",
