--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/point-in-polygon": "^1.0.0",
     "@types/request": "^2.48.4",
     "@types/xml2json": "^0.11.0",
+    "axios": "^0.19.2",
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -33,9 +34,7 @@
     "mongoose": "^5.7.5",
     "node-cache": "^5.0.2",
     "opencage-api-client": "^0.5.0",
-    "point-in-polygon": "^1.0.1",
-    "request": "^2.88.0",
-    "rootpath": "^0.1.2"
+    "point-in-polygon": "^1.0.1"
   },
   "_moduleAliases": {
     "@helpers": "build/helpers",
