--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose": "^5.7.5",
     "node-cache": "^5.0.2",
     "opencage-api-client": "^0.5.0",
-    "point-in-polygon": "^1.0.1"
+    "point-in-polygon": "^1.0.1",
+    "request": "^2.88.0"
   },
   "_moduleAliases": {
     "@helpers": "build/helpers",
