--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "npm run dev",
     "watch": "nodemon --exec \"npm run build && npm run start\" --watch src --ext ts",
@@ -20,7 +23,6 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/geojson": "^7946.0.7",
-    "@types/mongoose": "^5.5.40",
     "@types/node-cache": "^4.2.5",
     "@types/point-in-polygon": "^1.0.0",
     "@types/request": "^2.48.4",
