--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "nodemon --exec \"npm run build && npm run start\" --watch src --ext ts",
     "build": "rimraf ./build && tsc",
     "lint": "eslint . & echo 'lint complete'",
-    "dev": "ts-node-dev --transpileOnly ./src/index.ts",
+    "dev": "ts-node-dev --transpile-only ./src/index.ts",
     "prod": "tsc && node ./build/index.js",
     "debug": "tsc && node --inspect ./build/index.js"
   },
@@ -23,9 +23,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/geojson": "^7946.0.7",
-    "@types/node-cache": "^4.2.5",
     "@types/point-in-polygon": "^1.0.0",
-    "@types/request": "^2.48.4",
     "@types/xml2json": "^0.11.0",
     "axios": "^0.21.1",
     "cli-color": "^2.0.0",
@@ -35,9 +33,7 @@
     "module-alias": "^2.2.2",
     "mongoose": "^5.7.5",
     "node-cache": "^5.0.2",
-    "opencage-api-client": "^0.10.0",
     "point-in-polygon": "^1.0.1",
-    "request": "^2.88.0",
     "typescript-memoize": "^1.0.0-alpha.4"
   },
   "_moduleAliases": {
@@ -51,7 +47,7 @@
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.0",
     "ts-node": "^8.6.0",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^3.7.4"
   }
 }
