--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/node": "^13.1.6",
     "nodemon": "^2.0.2",
+    "dotenv": "^8.2.0",
     "rimraf": "^3.0.0",
     "ts-node": "^8.6.0",
     "ts-node-dev": "^1.1.1",
