--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
       ],
       "@db/*": [
         "db/*"
+      ],
+      "@websites/*": [
+        "websites/*"
       ]
     },
     "allowJs": true,
