--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "event-stream": "^4.0.1",
     "express": "^4.17.1",
     "fuse.js": "^6.4.6",
     "jsdom": "^16.4.0",
+    "JSONStream": "^1.3.5",
     "module-alias": "^2.2.2",
     "mongoose": "^5.7.5",
     "node-cache": "^5.0.2",
@@ -61,8 +63,11 @@
     "roots": [
       "<rootDir>/src/"
     ],
+    "testTimeout": 30000,
     "preset": "@shelf/jest-mongodb",
-    "watchPathIgnorePatterns": ["globalConfig"],
+    "watchPathIgnorePatterns": [
+      "globalConfig"
+    ],
     "setupFiles": [
       "dotenv/config",
       "<rootDir>/src/jest-setup.ts"
