--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,9 +11,13 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "15.x"
-      - name: Format
-        run: |
-          npm run format
+      -  name: Prettify code
+         uses: creyD/prettier_action@v3.1
+         with:
+            prettier_options: --write **/*.{js,ts}
+            same_commit: true
+         env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
         run: |
           npm run test
