--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,12 +11,18 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "15.x"
+      - name: Install
+        run: |
+          npm install
+      - name: Build
+        run: |
+          npm run build
+      - name: Test
+        run: |
+          npm run test
       -  name: Prettify code
          uses: creyD/prettier_action@v3.1
          with:
             prettier_options: --write **/*.{js,ts}
          env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Test
-        run: |
-          npm run test
