--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,7 +2,7 @@ on:
   pull_request:
     branches: [master]
 jobs:
-  format:
+  pr-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
