moi quand je trigger le check ca marche

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,30 +4,17 @@
     "downlevelIteration": true,
     "module": "commonjs",
     "experimentalDecorators": true,
-    "lib": [
-      "es2019"
-    ],
+    "lib": ["es2019"],
     "baseUrl": "./src",
     "paths": {
-      "@services/*": [
-        "services/*"
-      ],
-      "@helpers/*": [
-        "helpers/*"
-      ],
-      "@interfaces/*": [
-        "interfaces/*"
-      ],
-      "@db/*": [
-        "db/*"
-      ],
-      "@websites/*": [
-        "websites/*"
-      ]
+      "@services/*": ["services/*"],
+      "@helpers/*": ["helpers/*"],
+      "@interfaces/*": ["interfaces/*"],
+      "@db/*": ["db/*"],
+      "@websites/*": ["websites/*"]
     },
     "allowJs": true,
     "outDir": "./build",
-    "rootDir": "./src",
     "strict": false,
     "noImplicitAny": false,
     "esModuleInterop": true,
