--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - uses: actions/setup-node@v1
         with:
-          node-version: "15.x"
+          node-version: '15.x'
       - name: Install
         run: |
           npm install
@@ -20,9 +20,10 @@ jobs:
       - name: Test
         run: |
           npm run test
-      -  name: Prettify code
-         uses: creyD/prettier_action@v3.1
-         with:
-            prettier_options: --write **/*.{js,ts}
-         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Prettify code
+        uses: creyD/prettier_action@v3.1
+        with:
+          prettier_options: --write */.{js,ts}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MONGODB_URI_EMPRISE_BATIE: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
