--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,7 +2,25 @@ on:
   pull_request:
     branches: [master]
 jobs:
+  checksecret:
+    name: check if MY_SECRET is set in github secrets
+    runs-on: ubuntu-latest
+    outputs:
+      is_MY_SECRET_set: ${{ steps.checksecret_job.outputs.is_MY_SECRET_set }}
+    steps:
+      - name: Check whether unity activation requests should be done
+        id: checksecret_job
+        env:
+          MY_SECRET: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
+        run: |
+          echo "is_MY_SECRET_set: ${{ env.MY_SECRET != '' }}"
+          echo "::set-output name=is_MY_SECRET_set::${{ env.MY_SECRET != '' }}"
+
   pr-check:
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      MONGODB_URI_EMPRISE_BATIE: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -24,5 +42,3 @@ jobs:
         uses: creyD/prettier_action@v3.1
         with:
           prettier_options: --write **/*.{js,ts}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
