--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "15.x"
+    "node": "15.x",
+    "npm": "6.14.x"
   },
   "scripts": {
     "start": "npm run dev",
