--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/geojson": "^7946.0.7",
     "@types/point-in-polygon": "^1.0.0",
     "@types/xml2json": "^0.11.0",
+    "async": "^3.2.0",
     "axios": "^0.21.1",
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
