--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "JSONStream": "^1.3.5",
     "module-alias": "^2.2.2",
     "mongoose": "^5.7.5",
+    "mongoose-fuzzy-searching": "^2.0.2",
     "node-cache": "^5.0.2",
     "point-in-polygon": "^1.0.1",
     "typescript-memoize": "^1.0.0-alpha.4"
