--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^8.2.0",
     "event-stream": "^4.0.1",
     "express": "^4.17.1",
+    "express-ipfilter": "^1.2.0",
     "fuse.js": "^6.4.6",
     "jsdom": "^16.4.0",
     "JSONStream": "^1.3.5",
