--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         node-version: [15.x]
-        mongodb-version: ['4.0', '4.2', '4.4']
+        mongodb-version: ['4.0']
     steps:
       - name: Copy repository
         uses: actions/checkout@v2
