--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@sentry/node": "^5.7.1",
     "@types/cli-color": "^0.3.30",
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.25",
     "@types/geojson": "^7946.0.7",
     "@types/point-in-polygon": "^1.0.0",
     "@types/xml2json": "^0.11.0",
