--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ on:
 jobs:
   test:
     env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       MONGODB_URI_EMPRISE_BATIE: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
       MONGODB_URI_ENCADREMENT_ADDRESS1: ${{ secrets.MONGODB_URI_ENCADREMENT_ADDRESS1 }}
 
