--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "15.x"
+    "node": "16.x"
   },
   "scripts": {
     "start": "npm run dev",
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.13",
     "@types/geojson": "^7946.0.7",
+    "@types/node-cron": "^3.0.0",
     "@types/point-in-polygon": "^1.0.0",
     "@types/xml2json": "^0.11.0",
     "async": "^3.2.0",
@@ -39,7 +40,9 @@
     "module-alias": "^2.2.2",
     "mongoose": "^5.7.5",
     "node-cache": "^5.0.2",
+    "node-cron": "^3.0.0",
     "point-in-polygon": "^1.0.1",
+    "twitter-api-v2": "^1.6.5",
     "typescript-memoize": "^1.0.0-alpha.4"
   },
   "_moduleAliases": {
@@ -47,7 +50,9 @@
     "@services": "build/src/services",
     "@interfaces": "build/src/interfaces",
     "@db": "build/src/db",
-    "@websites": "build/src/websites"
+    "@websites": "build/src/websites",
+    "@delation": "build/src/delation",
+    "@cronjobs": "build/src/cronjobs"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
@@ -60,6 +65,6 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2"
   }
 }
