--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [15.x]
+        node-version: [16.x]
         mongodb-version: ['4.0']
     steps:
       - name: Copy repository
@@ -59,4 +59,5 @@ jobs:
       - name: Prettify code
         uses: creyD/prettier_action@v3.1
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           prettier_options: --write **/*.{js,ts}
