--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
+          persist-credentials: false
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -59,5 +60,6 @@ jobs:
       - name: Prettify code
         uses: creyD/prettier_action@v4.0
         with:
+          dry: True
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          prettier_options: --write **/*.{js,ts}
+          prettier_options: --check **/*.{js,ts}
