--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^5.7.1",
+    "@slack/web-api": "^6.5.1",
     "@types/cli-color": "^0.3.30",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.13",
@@ -53,8 +54,8 @@
     "@interfaces": "build/src/interfaces",
     "@db": "build/src/db",
     "@websites": "build/src/websites",
-    "@delation": "build/src/delation",
-    "@cronjobs": "build/src/cronjobs"
+    "@cronjobs": "build/src/cronjobs",
+    "@slack-service": "build/src/slack-service"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
