--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
       "@interfaces/*": ["interfaces/*"],
       "@db/*": ["db/*"],
       "@websites/*": ["websites/*"],
-      "@cronjobs/*": ["cronjobs/*"],
-      "@slack-service/*": ["slack-service/*"]
+      "@cronjobs/*": ["cronjobs/*"]
     },
     "allowJs": true,
     "outDir": "./build",
