add package for eslint

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "event-stream": "^4.0.1",
     "express": "^4.17.1",
     "express-ipfilter": "^1.2.0",
