--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "downlevelIteration": true,
     "module": "commonjs",
     "experimentalDecorators": true,
-    "lib": ["es2019", "dom"],
+    "lib": ["es2019", "dom", "dom.iterable"],
     "baseUrl": "./src",
     "paths": {
       "@api/*": ["api/*"],
