shop lat long blurry

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-cache": "^5.0.2",
     "node-cron": "^3.0.0",
     "point-in-polygon": "^1.0.1",
+    "random-position-in-polygon": "^1.0.6",
     "twitter-api-v2": "^1.6.5",
     "typescript-memoize": "^1.0.0-alpha.4"
   },
