--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       MONGODB_URI_EMPRISE_BATIE: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
       MONGODB_URI_ENCADREMENT_ADDRESS1: ${{ secrets.MONGODB_URI_ENCADREMENT_ADDRESS1 }}
+      MONGODB_URI_ENCADREMENT_ADDRESS2: ${{ secrets.MONGODB_URI_ENCADREMENT_ADDRESS2 }}
 
     runs-on: ubuntu-latest
     strategy:
