--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "npm run dev",
     "watch": "nodemon --exec \"npm run build && npm run start\" --watch src --ext ts",
     "build": "rimraf ./build && tsc",
-    "test": "jest --forceExit --detectOpenHandles",
-    "test:watch": "jest --watch --forceExit",
+    "test": "jest --forceExit --detectOpenHandles --no-cache",
+    "test:watch": "jest --watchAll  --forceExit",
     "dev": "ts-node-dev --transpile-only ./src/index.ts",
     "prod": "tsc && node ./build/src/index.js",
     "debug": "tsc && node --inspect ./build/src/index.js",
