--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "engines": {
     "node": "18.x",
-    "npm": "^9.2.0"
+    "npm": "9.x"
   },
   "scripts": {
     "start": "npm run dev",
