--- a/package.json
+++ b/package.json
@@ -22,35 +22,35 @@
   "author": "Aymeric & Thomas",
   "license": "ISC",
   "dependencies": {
-    "@sentry/node": "^7.57.0",
-    "@slack/web-api": "^6.6.0",
-    "@types/cli-color": "^0.3.30",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.13",
-    "@types/geojson": "^7946.0.7",
-    "@types/node-cron": "^3.0.0",
-    "@types/point-in-polygon": "^1.0.0",
-    "@types/xml2json": "^0.11.0",
-    "async": "^3.2.0",
-    "axios": "^0.25.0",
-    "cli-color": "^2.0.0",
+    "@sentry/node": "^7.64.0",
+    "@slack/web-api": "^6.9.0",
+    "@types/cli-color": "^2.0.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/geojson": "^7946.0.10",
+    "@types/node-cron": "^3.0.8",
+    "@types/point-in-polygon": "^1.1.1",
+    "@types/xml2json": "^0.11.4",
+    "async": "^3.2.4",
+    "axios": "^1.4.0",
+    "cli-color": "^2.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "dotenv": "^16.3.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "event-stream": "^4.0.1",
     "express": "^4.18.2",
-    "express-ipfilter": "^1.2.0",
-    "fuse.js": "^6.4.6",
-    "jest-environment-jsdom": "^28.1.1",
-    "jsdom": "^16.4.0",
-    "module-alias": "^2.2.2",
-    "mongoose": "^5.7.5",
-    "node-cache": "^5.0.2",
+    "express-ipfilter": "^1.3.1",
+    "fuse.js": "^6.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "jsdom": "^22.1.0",
+    "module-alias": "^2.2.3",
+    "mongoose": "^7.4.3",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
-    "point-in-polygon": "^1.0.1",
+    "point-in-polygon": "^1.1.0",
     "random-position-in-polygon": "^1.0.6",
-    "twitter-api-v2": "^1.6.5",
-    "typescript-memoize": "^1.0.0-alpha.4"
+    "twitter-api-v2": "^1.15.1",
+    "typescript-memoize": "^1.1.1"
   },
   "_moduleAliases": {
     "@api": "build/src/api",
@@ -61,20 +61,20 @@
     "@services": "build/src/services"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.2.3",
-    "@types/express-serve-static-core": "^4.17.25",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.4.0",
-    "jest": "^29.0.0",
-    "nodemon": "^2.0.16",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.4.0",
+    "@shelf/jest-mongodb": "^4.1.7",
+    "@types/express-serve-static-core": "^4.17.35",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^5.1.6"
   }
 }
