--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.5",
