--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
       MONGODB_URI_EMPRISE_BATIE: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
       MONGODB_URI_ENCADREMENT_ADDRESS1: ${{ secrets.MONGODB_URI_ENCADREMENT_ADDRESS1 }}
       MONGODB_URI_ENCADREMENT_ADDRESS2: ${{ secrets.MONGODB_URI_ENCADREMENT_ADDRESS2 }}
+      MONGODB_URI_ZONES: ${{ secrets.MONGODB_URI_ZONES }}
 
     runs-on: ubuntu-latest
     strategy:
