--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       MONGODB_URI_ZONES: ${{ secrets.MONGODB_URI_ZONES }}
 
     runs-on: ubuntu-latest
+    using: 'node20'
     strategy:
       matrix:
         node-version: [21.x]
