--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "event-stream": "^4.0.1",
     "express": "^4.18.2",
+    "fuse.js": "^7.0.0",
     "jsdom": "^24.1.0",
     "module-alias": "^2.2.3",
     "mongoose": "^8.1.0",
