--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "scripts": {
     "start": "npm run dev",
     "watch": "nodemon --exec \"npm run build && npm run start\" --watch src --ext ts",
-    "build": "rimraf ./build && tsc",
+    "build": "rimraf ./build && tsc && npm run sentry:sourcemaps",
     "test": "jest --forceExit --detectOpenHandles",
     "test:watch": "jest --forceExit --detectOpenHandles --no-cache --watchAll",
     "dev": "ts-node-dev --transpile-only ./src/index.ts",
     "prod": "node ./build/src/index.js",
     "debug": "tsc && node --inspect ./build/src/index.js",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org encadrement-loyers --project node ./build && sentry-cli sourcemaps upload --org encadrement-loyers --project node ./build"
   },
   "author": "Aymeric & Thomas",
   "license": "ISC",
   "dependencies": {
     "@mapbox/geojson-rewind": "^0.5.2",
+    "@sentry/cli": "^2.41.1",
     "@sentry/node": "^7.112.2",
     "@sentry/profiling-node": "^7.112.2",
     "@slack/web-api": "^7.0.0",
