--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,12 @@ jobs:
         node-version: [22.x]
         mongodb-version: ['4.0']
     steps:
+      - name: Setup Sentry CLI
+        uses: matbour/setup-sentry-cli@v1
+        with:
+          token: ${{ secrets.SENTRY_TOKEN }}
+          organization: encadrement-loyers
+          project: node
       - name: Copy repository
         uses: actions/checkout@v3
         with:
