--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       MONGODB_URI_EMPRISE_BATIE: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
       MONGODB_URI_ZONES: ${{ secrets.MONGODB_URI_ZONES }}
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_TOKEN }}
 
     runs-on: ubuntu-latest
     strategy:
