--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       MONGODB_URI_EMPRISE_BATIE: ${{ secrets.MONGODB_URI_EMPRISE_BATIE }}
       MONGODB_URI_ZONES: ${{ secrets.MONGODB_URI_ZONES }}
-      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_TOKEN }}
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
     runs-on: ubuntu-latest
     strategy:
@@ -33,7 +33,6 @@ jobs:
         with:
           version: latest
           url: https://encadrement-loyers.sentry.io/
-          token: ${{ secrets.SENTRY_TOKEN }}
           organization: encadrement-loyers
           project: node
       - name: Copy repository
