--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
+    "prettier"
   ],
   "rules": {
     "comma-dangle": [
