--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "engines": {
     "node": "22.x",
-    "npm": "10.x"
+    "npm": "11.x"
   },
   "scripts": {
     "start": "npm run dev",
@@ -18,7 +18,8 @@
     "debug": "tsc && node --inspect ./build/src/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org encadrement-loyers --project node ./build && sentry-cli sourcemaps upload --org encadrement-loyers --project node ./build"
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org encadrement-loyers --project node ./build && sentry-cli sourcemaps upload --org encadrement-loyers --project node ./build",
+    "kml-to-geojson": "node src/scripts/kml-to-geojson.js"
   },
   "author": "Aymeric & Thomas",
   "license": "ISC",
@@ -28,12 +29,14 @@
     "@sentry/node": "^7.112.2",
     "@sentry/profiling-node": "^7.112.2",
     "@slack/web-api": "^7.0.0",
+    "@tmcw/togeojson": "^7.1.1",
     "@types/cli-color": "^2.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^5.0.0",
     "@types/geojson": "^7946.0.10",
     "@types/node-cron": "^3.0.8",
     "@types/xml2json": "^0.11.4",
+    "@xmldom/xmldom": "^0.9.8",
     "async": "^3.2.4",
     "axios": "^1.4.0",
     "cli-color": "^2.0.3",
@@ -64,7 +67,8 @@
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/express-serve-static-core": "^4.17.35",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.5.0",
+    "@types/node": "^20.17.51",
+    "@types/xmldom": "^0.1.34",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.0",
@@ -75,6 +79,6 @@
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.8.3"
   }
 }
