--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "@db/*": ["db/*"],
       "@interfaces/*": ["interfaces/*"],
       "@messenger/*": ["messenger/*"],
-      "@services/*": ["services/*"]
+      "@services/*": ["services/*"],
     },
 
     "allowJs": true,
