--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org encadrement-loyers --project node ./build && sentry-cli sourcemaps upload --org encadrement-loyers --project node ./build",
-    "kml-to-geojson": "ts-node -r tsconfig-paths/register src/scripts/kml-to-geojson.ts"
+    "kml-to-geojson": "ts-node -r tsconfig-paths/register src/scripts/kml-to-geojson.ts",
+    "add-city": "ts-node -r tsconfig-paths/register src/scripts/add-city.ts"
   },
   "author": "Aymeric & Thomas",
   "license": "ISC",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/express-serve-static-core": "^4.17.35",
+    "@types/inquirer": "^9.0.8",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.17.51",
     "@types/xmldom": "^0.1.34",
@@ -74,6 +76,7 @@
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "inquirer": "^12.6.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.7",
