--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/xmldom": "^0.1.34",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
+    "adm-zip": "^0.5.16",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "inquirer": "^12.6.3",
