--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "adm-zip": "^0.5.16",
+    "csv-parser": "^3.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "iconv-lite": "^0.6.3",
     "inquirer": "^12.6.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
