--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@services": "build/src/services"
   },
   "devDependencies": {
+    "@ai-sdk/google": "^2.0.42",
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/express-serve-static-core": "^4.17.35",
     "@types/inquirer": "^9.0.8",
@@ -77,6 +78,7 @@
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "adm-zip": "^0.5.16",
+    "ai": "^5.0.101",
     "csv-parser": "^3.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -91,6 +93,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^4.1.13"
   }
 }
